2005-07-21  Not Zed  <NotZed@Ximian.com>

	* evolution.xml: removed the useless tools menu.

	* evolution-mail-list.xml: reverted dobey's broken hide menus.

2005-06-03  ANdre Klapper <a9016009@gmx.de>
	* evolution-mail-message.xml: Removing duplicate mnemonic,
	this fixes bug 306153

2005-05-31  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-list.xml: Rename ViewHideSelected to ViewShowSelected
	Enable the "Show Messages" sub-menu under "View"

	Fixes #305376

2005-05-16  Srinivasa Ragavan <sragavan@novell.com>
	
	* evolution-message-composer.xml: Removed the Show Attachment
	  menu item, since the attachment bar cannot be made hidden 
	  any more and is visible always
	  
2005-05-13  Rodney Dawes  <dobey@novell.com>

	* *.xml: Update to the new menu layout

2005-05-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #301459
	* evolution-message-composer.xml: Fixed the typo error.

2005-04-08  Not Zed  <NotZed@Ximian.com>

	* evolution-message-composer.xml: change the label to "Request
	read receipt".

2004-03-31  ERDI Gergo  <cactus@cactus.rulez.org>

	* evolution-message-composer.xml: Added new menu item for
	requesting message receipts when composing a new message

2005-02-14  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-list.xml:
	* evolution-mail-message.xml: Move a separator from the message xml
	to the list xml, so we don't have an extra separator in the external
	mail message display window

2005-02-01  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-global.xml:
	* evolution-mail-message.xml:
	Use the term vFolder instead of "VFolder" or "virtual folder"

	Fixes #68137

2005-01-24  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-global.xml: Add C-A-m as a keybinding for the
	"Post New Message" menuitem
	Add C-S-m to the "Compose New Message" menuitem as well

	Fixes #68352

2005-01-04  JP Rosevear  <jpr@novell.com>

	* evolution.xml: add component button view items
	
	* evolution.xml: set the toolbar look to "system" everywhere
	